# MyCodeTreasure

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_list_item.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
ei-datamapper/android/: build.gradle.kts
ei-datamapper/android/src/main/: AndroidManifest.xml
ei-datamapper/android/src/main/res/layout/: activity_my_data_mapper.xml
ei-datamapper/compiler/: build.gradle.kts
ei-datamapper/compiler/testData/: DataMapper.kt
ei-mergeviewbinding/android/: build.gradle.kts
ei-mergeviewbinding/android/src/main/: AndroidManifest.xml
ei-mergeviewbinding/android/src/main/res/layout/: first_type_layout.xml  (+3 more)
ei-mergeviewbinding/compiler/: build.gradle.kts
ei-opengl/: build.gradle.kts
ei-opengl/src/main/: AndroidManifest.xml
ei-opengl/src/main/cpp/: CMakeLists.txt  MyGLRenderContext.cpp  MyGLRenderContext.h  native-render.cpp
ei-opengl/src/main/cpp/graphic/: TriangleSample.cpp  TriangleSample.h
ei-opengl/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  LogUtils.h
ei-opengl/src/main/markdown/: Readme.md
ei-opengl/src/main/res/layout/: activity_my_open_gl_activity.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
local-plugin-repo/com/ei/plugin/plugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
markdown/: KSP.md  OpenGL.md
plugin/: build.gradle.kts
(+62 files in other folders)
